--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,24 @@
-<div class="envelop" *ngIf="!buttonClicked">
+<!-- <div class="envelop" *ngIf="!buttonClicked">
   <h1>נוריות</h1>
-  <div>
-    <div class="div-1">
-      <carousel [freeScroll]="true">
-        <div class="carousel-cell">
-            <img src="/assets/symbols/mazda.png">
-            <span>מזדה</span>
-        </div>
-        <div class="carousel-cell">
-          <img src="/assets/symbols/fiat.jpg">
-          <span>פיאט</span>
+  <div> -->
+
+<div class="wrapper">
+  <ngb-carousel *ngIf="images">
+    <ng-template ngbSlide *ngFor="let img of images; let i = index">
+      <div class="picsum-img-wrapper">
+        <img [src]="img">
       </div>
-      <div class="carousel-cell">
-        <img src="/assets/symbols/hunday.jpg">
-        <span>יונדאי</span>
-    </div>
-    <div class="carousel-cell">
-      <img src="/assets/symbols/subaru.jpg">
-      <span>סוברו</span>
-  </div>
-  <div class="carousel-cell">
-    <img src="/assets/symbols/ford.jpg">
-    <span>פורד</span>
+      <div>
+        <h2>{{carsnames[i]}}</h2>
+      </div>
+    </ng-template>
+  </ngb-carousel>
 </div>
-    </carousel>
-      <!-- <div class="div1-1">
+
+
+
+    <!-- <div class="div-1">
+      <div class="div1-1">
         <h4 style="color: white;">בחר יצרן רכב :</h4>
         <select (change)="manufacturerChosen($event)">
           <option *ngFor="let car of cars.cars" value="{{car.name}}" [(ngModel)]="selectedCar" ngDefaultControl name="car{{car.name}}">{{car.name}}</option>
@@ -41,11 +35,11 @@
         <select (change)="yearsChoosen($event)">
           <option *ngFor="let year of yearsToDisplay" value="{{year}}" [(ngModel)]="selectedYears" ngDefaultControl name="year">{{year}}</option>
         </select>
-      </div> -->
+      </div>
       <div style="visibility: hidden;" class="but-div" [ngClass]="{'show-button': yearChoosen}">
         <button (click)="searchCar()">!המשך</button>
       </div>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div>
 </div>
-<app-icons-page *ngIf="buttonClicked"></app-icons-page>
+<app-icons-page *ngIf="buttonClicked"></app-icons-page> -->
