--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,45 +1,30 @@
-<!-- <div class="envelop" *ngIf="!buttonClicked">
-  <h1>נוריות</h1>
-  <div> -->
 
-<div class="wrapper">
-  <ngb-carousel *ngIf="images">
-    <ng-template ngbSlide *ngFor="let img of images; let i = index">
-      <div class="picsum-img-wrapper">
-        <img [src]="img">
-      </div>
-      <div>
-        <h2>{{carsnames[i]}}</h2>
-      </div>
-    </ng-template>
-  </ngb-carousel>
+<div class="envelop">
+
+<div class="title-div">
+  <h1>NuriCar</h1>
 </div>
 
+    <div class="row-dp">
+      <mat-label>בחר יצרן:</mat-label>
+      <mat-select [(ngModel)]="selectedManufacturer" name="manufacturer" (selectionChange)="ManufacturerChange($event)">
+        <mat-option  class="opt" *ngFor="let car of carsnames; let i = index" [value]="car">
+          <img style="margin-left: 7px;" src='{{images[i]}}'>{{car}}
+        </mat-option>
+      </mat-select>
+    </div>
 
+    <div class="row-dp second-dp" *ngIf="manufacturerChoosen && selectedModelJson">
+      <mat-label>בחר מודל:</mat-label>
+      <mat-select [(ngModel)]="selectedModel" name="model" (selectionChange)="ModelChange($event)">
+        <mat-option  class="opt" *ngFor="let model of selectedModelJson" [value]="model">{{model.modelName}}</mat-option>
+      </mat-select>
+    </div>
 
-    <!-- <div class="div-1">
-      <div class="div1-1">
-        <h4 style="color: white;">בחר יצרן רכב :</h4>
-        <select (change)="manufacturerChosen($event)">
-          <option *ngFor="let car of cars.cars" value="{{car.name}}" [(ngModel)]="selectedCar" ngDefaultControl name="car{{car.name}}">{{car.name}}</option>
-        </select>
-      </div>
-      <div class="div1-2" style="opacity:0;" [ngClass]="{'show': manufacturerChoosen}">
-        <h4 style="color: white;">בחר דגם רכב :</h4>
-        <select (change)="modelChosen($event)">
-          <option *ngFor="let maz of mazda.mazda" value="{{maz.modelName}}" [(ngModel)]="selectedModel" ngDefaultControl name="model">{{maz.modelName}}</option>
-        </select>
-      </div>
-      <div class="div1-2" style="opacity:0;" [ngClass]="{'show': modelChoosen}">
-        <h4 style="color: white;">בחר שנתון רכב :</h4>
-        <select (change)="yearsChoosen($event)">
-          <option *ngFor="let year of yearsToDisplay" value="{{year}}" [(ngModel)]="selectedYears" ngDefaultControl name="year">{{year}}</option>
-        </select>
-      </div>
-      <div style="visibility: hidden;" class="but-div" [ngClass]="{'show-button': yearChoosen}">
-        <button (click)="searchCar()">!המשך</button>
-      </div>
-    </div> -->
-  <!-- </div>
+    <div class="row-dp second-dp" *ngIf="modelChoosen">
+      <mat-label>בחר שנה:</mat-label>
+      <mat-select [(ngModel)]="selectedYear" name="year" (selectionChange)="YearChange($event)">
+        <mat-option  class="opt" *ngFor="let year of selectedModel.years" [value]="year">{{year}}</mat-option>
+      </mat-select>
+    </div>
 </div>
-<app-icons-page *ngIf="buttonClicked"></app-icons-page> -->
