--- a/src/app/components/icons-page/icons-page.component.html
+++ b/src/app/components/icons-page/icons-page.component.html
@@ -1,6 +1,6 @@
 
 <div class="div-1">
-    <span>לחץ על הנורה שנדלקה לך כדי לקבל יותק פרטים על משמעותה</span>
+    <span>לחץ על הנורה שנדלקה לך כדי לקבל יותר פרטים על משמעותה</span>
 </div>
 <div class="envelop" *ngIf="iconService && iconService.imagesPathArray">
     <div class="icon-div" *ngFor="let icon of iconService.imagesPathArray">
