--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,6 +1,9 @@
 <div class="envelop">
     <div class="title-div">
-      <h1>NuriCar</h1>
+      <img class="logo" src="/assets/nuricar/logo.png"/> 
+    </div>
+    <div>
+      <i class="fas fa-arrow-left" style="color: #00B9B4;"></i>
     </div>
         <div class="row-dp">
           <mat-label>בחר יצרן:</mat-label>
