--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -7,11 +7,9 @@
     text-align: right;
 
     .title-div {
-        padding: 1rem;
         margin-bottom: 1rem;
-        h1 {
-            color: white;
-            font-weight: bold;
+        img {
+            width: 157px;
         }
     }
     .row-dp {
