--- a/src/app/components/splash-screen/splash-screen.component.scss
+++ b/src/app/components/splash-screen/splash-screen.component.scss
@@ -26,6 +26,7 @@
             text-shadow: -17px 0px 99px #00000029;
             text-align: center;
             font-size: 19px;
+            font-family: 'Assistant', sans-serif;
             line-height: 25px;
         }
         button {
@@ -37,6 +38,7 @@
             padding-top: 9px;
             margin-top: 36px;
             padding-bottom: 8px;
+            font-family: 'Assistant', sans-serif;
             font-size: 20px;
         }
     }
