--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,9 +1,9 @@
 <div class="envelop">
     <div class="title-div">
-      <img class="logo" src="/assets/nuricar/logo.png"/> 
+      <img class="logo" src="/assets/nuricar/logo.jpeg"/> 
     </div>
     <div>
-      <i class="fas fa-arrow-left" style="color: #00B9B4;"></i>
+      <img class="logo" src="/assets/nuricar/left_arrow.png"/> 
     </div>
         <div class="row-dp">
           <mat-label>בחר יצרן:</mat-label>
