--- a/src/app/components/splash-screen/splash-screen.component.scss
+++ b/src/app/components/splash-screen/splash-screen.component.scss
@@ -6,18 +6,22 @@
     direction: rtl;
     background-image: url("/assets/nuricar/bg.png");
     background-repeat: no-repeat;
-    background-position: -142px -352px;
-    background-size: 647px;
+    background-position: -95px -80px;
+    background-size: 501px;
     .par {
-        margin-top: 310px;
+        margin-top: 345px;
         width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
         .logo-div {
             text-align: center;
+            width: 100%;
+            padding-left: 35px;
+            padding-right: 2.0rem;
+            margin-bottom: 22px;
             .logo {
-                width: 425px;
+                width: 100%;
             }
         }
         p {
