--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -3,7 +3,7 @@
       <img class="logo" src="/assets/nuricar/logo.png"/> 
     </div>
     <div class="arrow-div">
-      <img class="arrow" src="/assets/nuricar/left_arrow.png"/> 
+      <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/> 
     </div>
         <div class="row-dp">
           <mat-label>בחר יצרן:</mat-label>
