--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,17 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+html, body { 
+    margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
     background-image: url("/assets/nuricar/bg_body.png");
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 100% !important;
 }
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
