--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -8,6 +8,7 @@
 
     .title-div {
         margin-bottom: 1rem;
+        margin-top: 20px;
         img {
             width: 155px;
             padding-left: 3px;
@@ -23,6 +24,7 @@
         }
     }
     .row-dp {
+        margin-top: 131.36px;
         text-align: right;
         direction: rtl;
         width: 66%;        
