--- a/src/app/components/icons-page/icons-page.component.html
+++ b/src/app/components/icons-page/icons-page.component.html
@@ -9,4 +9,7 @@
     <div class="icon-div" *ngFor="let icon of iconService.imagesPathArray" (click)="IconClicked(icon)">
         <img class="icon" [src]="icon"/>
     </div>
+    <div class="missing">
+        <p>הנורה שחיפשתם לא נמצאת?<span (click)="missingLight()">הקליקו כאן</span></p>
+    </div>
 </div>
