--- a/src/app/components/icons-page/icons-page.component.scss
+++ b/src/app/components/icons-page/icons-page.component.scss
@@ -32,4 +32,18 @@
             cursor: pointer;
         }
     }
+    .missing {
+        p {
+            text-align: center;
+            font-size: 20px;    
+            color: white;
+            font-family: 'Assistant', sans-serif;
+            direction: rtl;
+            span {
+                color: aqua;
+                cursor: pointer;
+                margin-right: 5px;
+            }
+        }
+    }
 }
