--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,32 @@ html, body {
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.cdk-overlay-pane.missing-box {
+    mat-dialog-container {
+        background-color: #f0f0f0;
+        border-radius: 5px;
+    }
+}
+.cdk-overlay-pane.not-g {
+    mat-dialog-container {
+        background-color: lightgreen;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 50px;
+    }
+}
+.cdk-overlay-pane.not-r {
+    mat-dialog-container {
+        background-color: lightcoral;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 50px;
+    }
+}
