--- a/src/app/components/notifications/notifications.component.scss
+++ b/src/app/components/notifications/notifications.component.scss
@@ -8,6 +8,7 @@
     left: 0px;
     justify-content: space-between;
     padding: 1rem;
+    padding-top: 38px;
     .div-1{
         width: 5%;
     }   
