--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -7,7 +7,7 @@
     </div> -->
         <div class="row-dp">
           <mat-label>בחר יצרן:</mat-label>
-          <mat-select [(ngModel)]="iconService.selectedManufacturer" name="manufacturer" (selectionChange)="ManufacturerChange($event)" disableOptionCentering="" panelClass="panelClass">
+          <mat-select [(ngModel)]="iconService.selectedManufacturer" name="manufacturer" (selectionChange)="ManufacturerChange($event)">
             <mat-option  class="opt" *ngFor="let car of carsnames; let i = index" [value]="car">
               <img style="margin-left: 7px;" src='{{images[i]}}'>{{car}}
             </mat-option>
@@ -16,14 +16,14 @@
     
         <div class="row-dp second-dp" *ngIf="iconService.manufacturerChoosen && iconService.selectedModelJson">
           <mat-label>בחר מודל:</mat-label>
-          <mat-select [(ngModel)]="iconService.selectedModel" name="model" (selectionChange)="ModelChange($event)"  disableOptionCentering="" panelClass="panelClass">
+          <mat-select [(ngModel)]="iconService.selectedModel" name="model" (selectionChange)="ModelChange($event)">
             <mat-option  class="opt" *ngFor="let model of iconService.selectedModelJson" [value]="model">{{model.modelName}}</mat-option>
           </mat-select>
         </div>
     
         <div class="row-dp second-dp" *ngIf="iconService.modelChoosen">
           <mat-label>בחר שנה:</mat-label>
-          <mat-select [(ngModel)]="iconService.selectedYear" name="year" (selectionChange)="YearChange($event)"  disableOptionCentering="" panelClass="panelClass">
+          <mat-select [(ngModel)]="iconService.selectedYear" name="year" (selectionChange)="YearChange($event)">
             <mat-option  class="opt" *ngFor="let year of iconService.selectedModel.years" [value]="year">{{year | hybrid}}</mat-option>
           </mat-select>
         </div>
