--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -6,26 +6,58 @@
       <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/> 
     </div> -->
         <div class="row-dp">
-          <mat-label>בחר יצרן:</mat-label>
+          <!-- <mat-label>בחר יצרן:</mat-label>
           <mat-select [(ngModel)]="iconService.selectedManufacturer" name="manufacturer" (selectionChange)="ManufacturerChange($event)">
             <mat-option  class="opt" *ngFor="let car of carsnames; let i = index" [value]="car">
               <img style="margin-left: 7px;" src='{{images[i]}}'>{{car}}
             </mat-option>
-          </mat-select>
+          </mat-select> -->
+          <label class="label">בחר יצרן:</label>
+          <ng-select [(ngModel)]="iconService.selectedManufacturer" 
+                     name="manufacturer"
+                     (change)="ManufacturerChange($event)"
+                     [editableSearchTerm]="false"
+                     [searchable]="false"
+                     [clearable]="false"
+                     [multiple]="false">
+            <ng-option *ngFor="let car of carsnames; let i = index" [value]="car">
+              <img class="img" src='{{images[i]}}'>{{car}}
+            </ng-option>
+         </ng-select>
         </div>
     
         <div class="row-dp second-dp" *ngIf="iconService.manufacturerChoosen && iconService.selectedModelJson">
-          <mat-label>בחר מודל:</mat-label>
+          <!-- <mat-label>בחר מודל:</mat-label>
           <mat-select [(ngModel)]="iconService.selectedModel" name="model" (selectionChange)="ModelChange($event)">
             <mat-option  class="opt" *ngFor="let model of iconService.selectedModelJson" [value]="model">{{model.modelName}}</mat-option>
-          </mat-select>
+          </mat-select> -->
+          <label class="label">בחר מודל:</label>
+          <ng-select [(ngModel)]="iconService.selectedModel" 
+                     name="model"
+                     (change)="ModelChange($event)"
+                     [editableSearchTerm]="false"
+                     [searchable]="false"
+                     [clearable]="false"
+                     [multiple]="false">
+            <ng-option *ngFor="let model of iconService.selectedModelJson" [value]="model">{{model.modelName}}</ng-option>
+          </ng-select>
         </div>
     
         <div class="row-dp second-dp" *ngIf="iconService.modelChoosen">
-          <mat-label>בחר שנה:</mat-label>
+          <!-- <mat-label>בחר שנה:</mat-label>
           <mat-select [(ngModel)]="iconService.selectedYear" name="year" (selectionChange)="YearChange($event)">
             <mat-option  class="opt" *ngFor="let year of iconService.selectedModel.years" [value]="year">{{year | hybrid}}</mat-option>
-          </mat-select>
+          </mat-select> -->
+          <label class="label">בחר שנה:</label>
+          <ng-select [(ngModel)]="iconService.selectedYear" 
+                     name="year"
+                     (change)="YearChange($event)"
+                     [editableSearchTerm]="false"
+                     [searchable]="false"
+                     [clearable]="false"
+                     [multiple]="false">
+            <ng-option *ngFor="let year of iconService.selectedModel.years" [value]="year">{{year | hybrid}}</ng-option>
+          </ng-select>
         </div>
     
         <div class="but-div" *ngIf="iconService.buttonClicked" (click)="SearchCar()">
