--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@ html, body {
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
-
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
