--- a/src/app/components/icons-page/icons-page.component.scss
+++ b/src/app/components/icons-page/icons-page.component.scss
@@ -10,6 +10,11 @@
     width: 100%;
     text-align: left;
     margin-bottom: 15px;
+    display: flex;
+    app-breadcums {
+        display: flex;
+        align-items: center;
+    }
     .arrow {
         width: 45px;
         height: 45px;
