--- a/src/app/components/focused-icon/focused-icon.component.html
+++ b/src/app/components/focused-icon/focused-icon.component.html
@@ -1,16 +1,29 @@
 
 <div class="arrow-div">
     <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/> 
+    <app-breadcums></app-breadcums>
+</div>
+<div class="desc-div" *ngIf="icon">
+      <h3>שם הנורה:</h3>
+      <span style="font-size: 25px;text-decoration: underline;">{{icon?.title}}</span>
   </div>
 <div class="envelopIconFocusPage">
     <img src="{{iconService.focusedIcon}}" />
 </div>
-<div class="desc-div" *ngIf="icon">
+<div class="desc-div" *ngIf="icon" style="margin-top: 0px;">
     <h3>חומרה:</h3>
     <span *ngIf="icon?.severity === 'red'" style="font-weight: bold; color: red;padding-right: 20px;">קריטי</span>
     <span *ngIf="icon?.severity === 'orange'" style="font-weight: bold; color: orange;padding-right: 20px;">חמור</span>
     <span *ngIf="icon?.severity === 'green'" style="font-weight: bold; color: green;padding-right: 20px;">לא קריטי</span>
     <span *ngIf="icon?.severity === 'blue'" style="font-weight: bold; color: blue;padding-right: 20px;">הודעה בלבד</span>
+    <span *ngIf="icon?.severity !== 'red' &&
+                 icon?.severity !== 'orange' &&
+                 icon?.severity !== 'green' &&
+                 icon?.severity !== 'blue'"
+                 style="font-weight: bold; color: red;padding-right: 20px;">
+                חמור 
+            <span style="color: white;"> (יתכן שהנורה קיימת במספר צבעים, לרוב אדומה) </span>    
+            </span>
 </div>
 <div class="desc-div" *ngIf="icon">
     <h3>תיאור הנורה:</h3>
