--- a/src/app/components/focused-icon/focused-icon.component.scss
+++ b/src/app/components/focused-icon/focused-icon.component.scss
@@ -10,6 +10,11 @@
     width: 100%;
     text-align: left;
     margin-bottom: 15px;
+    display: flex;
+    app-breadcums {
+        display: flex;
+        align-items: center;
+    }
     .arrow {
         width: 45px;
         height: 45px;
@@ -20,6 +25,7 @@
     justify-content: center;
     padding: 1rem;
     padding-top: 0px;
+    padding-bottom: 0px;
     img {
         width: 170px;
         height: 100px;
@@ -35,7 +41,6 @@
     }
     direction: rtl;
     text-align: right;
-    margin-top: 25px;
     padding: 20px;
     color: white;
     .desc {
