--- a/src/app/components/icons-page/icons-page.component.html
+++ b/src/app/components/icons-page/icons-page.component.html
@@ -3,7 +3,8 @@
     <span>לחץ על הנורה שנדלקה לך כדי לקבל יותר פרטים על משמעותה</span>
 </div>
 <div class="arrow-div">
-    <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/> 
+    <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
+    <app-breadcums></app-breadcums>
   </div>
 <div class="envelopIconPage" *ngIf="iconService && iconService.imagesPathArray">
     <div class="icon-div" *ngFor="let icon of iconService.imagesPathArray" (click)="IconClicked(icon)">
