--- a/src/app/components/focused-icon/focused-icon.component.scss
+++ b/src/app/components/focused-icon/focused-icon.component.scss
@@ -11,6 +11,7 @@
     text-align: left;
     margin-bottom: 15px;
     display: flex;
+    justify-content: space-around;
     app-breadcums {
         display: flex;
         align-items: center;
