--- a/src/app/components/focused-icon/focused-icon.component.html
+++ b/src/app/components/focused-icon/focused-icon.component.html
@@ -11,7 +11,7 @@
     <img src="{{iconService.focusedIcon}}" />
 </div>
 <div class="desc-div" *ngIf="icon" style="margin-top: 0px;">
-    <h3>חומרה: <span style="font-size: 14px;">(יתכן שהונרה תופיעה בצבעים שונים לפי סוג הרכב)</span></h3>
+    <h3>חומרה: <span style="font-size: 14px;" *ngIf="severity?.includes(',')">(יתכן שהונרה תופיעה בצבעים שונים לפי סוג הרכב)</span></h3>
     <span [innerHTML]="severity | iconColor"></span>       
 </div>
 <div class="desc-div" *ngIf="icon">
