--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 
+<menu #menu clickOutside (clickOutside)="closeMenu()"></menu>
 <ngx-ui-loader></ngx-ui-loader>
 <router-outlet></router-outlet>
+  
