arrow back hamburger

--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -1,1 +1,4 @@
-<div style="color: white;">נהוראי המלשין</div>
+<div class="arrow-div">
+    <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
+</div>
+<div style="color: white; direction: rtl;text-align: right;padding: 20px;">נהוראי המלשין</div>
