--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,1 +1,5 @@
-<div style="color: white;">נהוראי הצהוב</div>
+<div class="arrow-div">
+    <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
+</div>
+
+<div style="color: white; direction: rtl;text-align: right;padding: 20px;">נהוראי הצהוב</div>
