--- a/src/app/components/policy/policy.component.html
+++ b/src/app/components/policy/policy.component.html
@@ -1,1 +1,4 @@
-<div style="color: white;">נהוראי השוטר</div>
+<div class="arrow-div">
+    <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
+ </div>
+<div style="color: white; direction: rtl;text-align: right;padding: 20px;">נהוראי השוטר</div>
