--- a/src/app/components/tips/tips.component.html
+++ b/src/app/components/tips/tips.component.html
@@ -1,5 +1,4 @@
 <div class="arrow-div">
     <img class="arrow" (click)="Back()" src="/assets/nuricar/left_arrow.png"/>
 </div>
-<div style="color: white; direction: rtl;text-align: right;padding: 20px;">בדיקת רמת שמן מנוע ברכב </div>
-<iframe width="560" height="315"  title="בדיקת רמת שמן מנוע ברכב " src="https://youtu.be/ggRPAtnoBro" frameborder="0" allowfullscreen></iframe>
+<div style="color: white; direction: rtl;text-align: right;padding: 20px;">נהוראי הפקח</div>
