--- a/src/app/components/help/help.component.html
+++ b/src/app/components/help/help.component.html
@@ -4,10 +4,10 @@
 <ul style="padding: 20px;">
     <li style="display: flex;flex-direction: column;">
         <div style="color: white; direction: rtl;text-align: right;padding: 20px;font-size: 20px;">בדיקת רמת שמן מנוע ברכב</div>
-        <iframe  title="בדיקת רמת שמן מנוע ברכב " src="https://www.youtube.com/embed/ggRPAtnoBro" frameborder="0" allowfullscreen></iframe>
+        <iframe style="height: 300px;"  title="בדיקת רמת שמן מנוע ברכב " src="https://www.youtube.com/embed/ggRPAtnoBro" frameborder="0" allowfullscreen></iframe>
     </li>
     <li style="display: flex;flex-direction: column;">
         <div style="color: white; direction: rtl;text-align: right;padding: 20px;font-size: 20px;">מילוי אוויר בצמיגי הרכב</div>
-        <iframe  title="בדיקת רמת שמן מנוע ברכב " src="https://www.youtube.com/embed/L63Z1i7vJ4s" frameborder="0" allowfullscreen></iframe>
+        <iframe  style="height: 300px;" title="בדיקת רמת שמן מנוע ברכב " src="https://www.youtube.com/embed/L63Z1i7vJ4s" frameborder="0" allowfullscreen></iframe>
     </li>
 </ul>
