--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
-<menu #menu clickOutside (clickOutside)="closeMenu()"></menu>
+<!-- <menu #menu clickOutside (clickOutside)="closeMenu()"></menu> -->
 <ngx-ui-loader></ngx-ui-loader>
 <router-outlet></router-outlet>
   
