--- a/src/app/components/splash-screen/splash-screen.component.scss
+++ b/src/app/components/splash-screen/splash-screen.component.scss
@@ -1,53 +1,72 @@
 .envelopSplash {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: right;
     direction: rtl;
-    background-image: url("/assets/nuricar/bg.png");
-    background-repeat: no-repeat;
-    background-position: -95px -80px;
-    background-size: 501px;
-    .par {
-        margin-top: 290px;
-        width: 100%;
+    height: 100%;
+
+    .logo-div {
         display: flex;
-        flex-direction: column;
+        height: 100%;
+        justify-content: center;
         align-items: center;
-        .logo-div {
-            text-align: center;
-            width: 100%;
-            padding-left: 35px;  
-            padding-right: 2.0rem;
-            margin-bottom: 22px;
-            .logo {
-                width: 100%;
-            }
-        }
-        p {
-            width: 73%;
-            color: white;
-            text-shadow: -17px 0px 99px #00000029;
-            text-align: center;
-            font-size: 19px;
-            font-family: 'Assistant', sans-serif;
-            line-height: 25px;
-        }
-        button {
-            cursor: pointer;
-            background-color: #00B9B4;
-            color: white;
-            border: none;
-            width: 62%;
-            padding-top: 9px;
-            margin-top: 36px;
-            padding-bottom: 8px;
-            font-family: 'Assistant', sans-serif;
-            font-size: 20px;
-        }
-        button:hover {
-            color: #80C8C6;
-            box-shadow: 13pt 8pt 24pt #80C8C640;
+        .logo {
+            width: 252px;
+            height: 43px;
+            flex-shrink: 0;
         }
     }
+    .logo-div-2 {
+        display: flex;
+        height: 100%;
+        flex-direction: column;
+        align-items: flex-end;
+        .logo {
+            width: 252px;
+            height: 43px;
+            flex-shrink: 0;
+            margin-top: 136px;
+            margin-left: 17px;
+        }
+        .car {
+            width: 450px;
+            height: 460px;
+        }
+        .text {
+            padding-right: 16px;
+            padding-bottom: 21px;
+            padding-left: 72px;
+            margin-top: 40px;
+            color: #FFF;
+        }
+        .button-div {
+            display: flex;
+            padding-right: 16px;
+            justify-content: flex-start;
+            width: 100%;
+            .next-button {
+                margin-right: 16px;
+                padding-left: 48px;
+                padding-right: 48px;
+                padding-top: 6px;
+                padding-bottom: 6px;
+                cursor: pointer;
+                color: #FFF;
+                display: flex;
+                direction: rtl;
+                background: #1E1D1D;
+                justify-content: center;
+                gap: 10px;
+                font-size: 14px;
+                border: none;
+                border-radius: 15px;
+                font-style: normal;
+                font-weight: 500;
+            }
+        }
+    }
+}
+.first-bg-gradient {
+    background: linear-gradient(180deg, #06C7DB 0%, #012E32 48.7%, #000 63.27%);
+}
+.second-bg-gradient {
+    background: linear-gradient(192deg, rgba(0, 0, 0, 0.88) 0%, #344147 24.38%, #011E22 50.78%, #00E5F5 101.57%);   
 }
