--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,10 +2,6 @@
 
 html, body { 
     margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
-    background-image: url("/assets/nuricar/bg_body.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    //@at-root: 100% !important;
     height: 100%;
     width: 100%;
 }
@@ -21,7 +17,20 @@ html, body {
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+     margin: 0;
+     font-family: Roboto !important;
+     font: unset !important;
+     letter-spacing: unset !important;
+ }
+app-root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    app-splash-screen {
+        height: 100%;
+    }
+}
 .cdk-overlay-pane.missing-box {
     mat-dialog-container {
         background-color: #f0f0f0;
