--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -24,7 +24,6 @@
         }
     }
     .row-dp {
-        margin-top: 93px;
         text-align: right;
         direction: rtl;
         width: 66%;        
@@ -32,22 +31,22 @@
         padding-right: 0px;
         padding-left: 0px;
         .img {
-            width: 30px;
-            height: 30px;
+            width: 18px;
+            height: 18px;
             margin-left: 7px;
         }
         .label {
-            color: #707070;
+            color: white;
             position: relative;
-            top: 33px;
-            right: 10px;
+            bottom: 5px;
+            right: 3px;
             font-size: 14px;
             font-family: Roboto,Helvetica Neue,sans-serif;
             z-index: 1049;
         }
     }
     .second-dp {
-        margin-top: -16px;
+        margin-top: 20px;
     }
     .but-div {
         margin-top: 2rem;
@@ -55,16 +54,15 @@
         display: flex;
         justify-content: center;
         button {
-            cursor: pointer;
-            background-color: #00B9B4;
+            border-radius: 15px;
+            background: #00E5F5;
+            width: 303px;
+            padding: 7px 48px;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            font-weight: 500;
             color: white;
-            border: none;
-            width: 62%;
-            padding-top: 9px;
-            margin-top: 36px;
-            padding-bottom: 8px;
-            font-family: 'Assistant', sans-serif;
-            font-size: 20px;
         }
         button:hover {
             color: #80C8C6;
@@ -74,38 +72,51 @@
 }
 
 ::ng-deep {
+    ::ng-deep .ng-select .ng-select-container .ng-arrow-wrapper::before {
+        content: '';
+        display: block;
+        width: 22px;
+        height: 22px;
+        background-image: url('/assets/nuricar/plus-icon.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+      
+      ::ng-deep .ng-select .ng-select-container .ng-arrow-wrapper .ng-arrow {
+        display: none;
+      }
     .ng-select.ng-select-opened>.ng-select-container .ng-arrow {
         top: unset;
         transform: rotate(0deg);
     }
     .ng-select .ng-select-container {
-        border-radius: 0px !important;
-        height: 45px !important;
+        border-radius: 50px !important;
+        background: #3F3F3F;
+        height: 39px !important;
+        width: 303px;
+        border: none !important;
         padding-right: 9px;
         padding-left: 10px;
         font-size: 20px;
         color: #707070!important;
         font-weight: 700;
         font-size: 14px;
-        background-color: #eee;
         font-family: Roboto,Helvetica Neue,sans-serif;
         .ng-arrow-wrapper {
             position: relative;
-            top: 4px;
-            right: 2px;
+            top: 0px;
+            right: -10px;
             span {
                 border-color: transparent transparent #00b9b4 !important;
                 border-width: 0 5px 5px;
                 transform: rotate(180deg);
             }
         } 
-        .ng-value-container .ng-value .ng-value-label img {
-            display: none !important;
-        }
         .ng-value-container {
             font-family: Roboto,Helvetica Neue,sans-serif !important;
             position: relative;
-            top: 10px;
+            top: 2px;
+            color: white;
         }
         .ng-value {
             position: relative;
@@ -113,16 +124,52 @@
         }
     }
     .ng-option {
-        color: #707070!important;
-        font-size: 20px;
+        color: #FFF !important;
+        width: 303px;
+        height: 34px;
+    }
+    .ng-option:nth-child(odd) {
+        background-color: #101010 !important;
+    }
+    
+    .ng-option:nth-child(even) {
+        background-color: #000 !important;
     }
     .ng-dropdown-panel, .ng-dropdown-panel .scroll-host {
         background-color: #eee !important;
         .ng-dropdown-panel-items .ng-option {
             background-color: #eee;
         }
+        border: none;
+        margin-left: -1px;
     }
     .ng-select.ng-select-opened>.ng-select-container {
-        background-color: #eee !important;
+        background-color: #000 !important;
     }
+}
+
+.envelop {
+    height: 100%;
+    background: var(--Bg-Color, #1E1D1D);
+    .header {
+        display: flex;
+    }
+    .choose {
+        display: flex;
+        justify-content: center;
+        direction: rtl;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        color: white;
+        line-height: normal;
+    }
+}
+.end {
+    justify-content: flex-end !important;
+}
+.div-opt {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
